--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -8,8 +8,6 @@ footer {
 	height: max(5vmin, 50px);
 	width: 100%;
 
-	padding-top: 3px;
-
 	background-color: $footer-background-color;
 	color: $footer-foreground-color;
 }
