--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -25,7 +25,6 @@
 .middle {
 	display: grid;
 	place-items: center;
-	height: 100vh;
 }
 
 .columns {
